# 11

.github/workflows/: main.yml
app/: build.gradle
app/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/include/: main.h
app/src/main/cpp/shaders/: shader.frag
